--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body, html {
   /* Logo and Navigation Container */
   .logo-nav-container {
     display: flex;
-    flex-direction: column; /* Stack the logo and nav vertically */
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 40px;
@@ -52,19 +52,23 @@ body, html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px; 
+  padding: 0 10px; /* Reduced padding */
   height: 100px;
 }
 
 .logo {
   max-height: 80px;
   max-width: 100%;
+  padding: 0 40px; 
   display: block;
 }
 
 /* Navigation */
 nav {
   display: flex; 
+  justify-content: flex-end; /* Align nav items to the right */
+  width: auto;
+  margin-left: auto; /* Pushes nav items to the right */
 }
 
 .navigation {
