--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,14 @@ body, html {
   }
 
   .divider-1 {
-    width: 104%;
+    width: 100%;
     border-bottom: 1px solid black;
     padding: 15px 0; /* Spacing for the container */
     margin: 18px 0px; /* Space around the divider */
   }
 
   .divider-2 {
-    width: 104%;
+    width: 100%;
     border-top: 1px solid black;
     padding: 15px 0; /* Spacing for the container */
     margin: 18px 0px; /* Space around the divider */
@@ -51,13 +51,31 @@ body, html {
 
   .flex-item {
     flex: 0 45%;
-}}
+}
+}
 
 /*------------------------------------------------------------------------*/
 /* Desktop Screen */
 @media screen and (min-width: 700px){
   nav {
     margin-left: auto; /* Push nav items to the right */
+  }
+}
+
+@media screen and (min-width: 1000px){
+  .flex-item {
+    padding: 10px;
+    flex-basis: 15%;
+    display: flex;
+    flex-direction: column;
+    min-height: 300px;
+  }
+  
+  .flex-item img {
+    width: 100%;
+    min-width: 250px;
+    min-height: 250px;
+    margin: 0 10px; /* Center the image */
   }
 }
 
@@ -187,11 +205,9 @@ button:hover {
 /* Cake Pictures & Text */
 .flex-item {
   padding: 10px;
-  flex-grow: 1;
   flex-basis: 15%;
   display: flex;
   flex-direction: column;
-  text-align: left;
   min-height: 250px;
 }
 
@@ -216,14 +232,62 @@ button:hover {
 }
 
 /*------------------------------------------------------------------------*/
-/* Menu FLexboxes */
-.container {
+/* Menu */
+.menu-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
+  padding: 0 10px;
 }
 
+.menu-item {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  min-height: 200px;
+  width: 20%;
+  margin: 10px;
+}
+
+.menu-item img {
+  width: 100%;
+  max-width: 350px;
+  height: auto;
+  margin: 0 10px; /* Center the image */
+}
+
+.menu-info {
+  max-width: 250px;
+  flex-grow: 1; 
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu-info p {
+  margin: 5px 0;
+}
+
+.item-name {
+  font-weight: bold;
+}
+
+/* Mobile and smaller screen adjustments */
+@media screen and (max-width: 700px) {
+  .menu-item {
+    flex: 0 30%;
+  }
+}
+
+/* Further mobile optimization */
+@media screen and (max-width: 500px) {
+  .menu-item {
+    width: 100%;
+  }
+}
 /*------------------------------------------------------------------------*/
 /* Stores & Contact */
 .storeinfo {
