modified:   css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -613,7 +613,7 @@ button:hover {
 /*------------------------------------------------------------------------*/
 /* About */
 h2.about-ingre {
-  color: #532A17;
+  color: #532b1d;
 }
 
 .centertext{
